--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -5,7 +5,7 @@
     --hover-color: #7c0000;
     --background-color: #ffffff;
     --custom-color: #dfdfdf;
-    --alternative-color: #ffdcbc;
+    --alternative-color: #ffe9d4;
     --alternative-text: #ff8f26;
 }
 
